[package]
name = "bitcoin-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.9.2"
hyper = { version = "0.14.20", features = ["client", "http1", "tcp", "server"] }
regex = {version = "1.6.0", features = ["std", "perf"], default-features = false}
tokio = { version = "1.20.1", features = ["rt-multi-thread", "net", "io-util", "sync"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"

[profile.release]
lto = true
codegen-units = 1
